--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,18 @@ name: elixphoenix
 
 services:
   app:
-    build:
-      context: .docker/elixir
-      target: base
-    tty: true
-    stdin_open: true
+    image: exilesprx/elixphoenix-app:${VERSION:-main}
     depends_on:
       database:
         condition: service_healthy
-    volumes:
-      - app:/usr/src/app
     networks:
       - elixphoenix
-    ports:
-      - "4000:4000"
-    working_dir: /usr/src/app
 
   database:
-    build:
-      context: .docker/postgres
-      target: base
+    image: exilesprx/elixphoenix-database:${VERSION:-main}
     shm_size: 128mb
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-elixphoenix_dev}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB"]
       interval: 5s
       timeout: 30s
       retries: 5
@@ -34,18 +23,12 @@ services:
     networks:
       - elixphoenix
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
 
 volumes:
   database:
-  app:
-    driver: local
-    driver_opts:
-      type: none
-      device: .
-      o: bind
 
 networks:
   elixphoenix:
