--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,21 +4,20 @@ services:
   app:
     build:
       context: .docker/elixir
-      target: base
+      target: dev
     tty: true
     stdin_open: true
     volumes:
       - app:/usr/src/app
     ports:
       - "4000:4000"
-    working_dir: /usr/src/app
 
   database:
     build:
       context: .docker/postgres
-      target: base
+      target: dev
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-elixphoenix_dev"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-elixphoenix_dev}"]
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
