--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,11 @@ services:
       target: dev
     tty: true
     stdin_open: true
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME:-database}
     volumes:
       - app:/usr/src/app
     ports:
