--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,15 +7,16 @@ services:
       target: dev
     tty: true
     stdin_open: true
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME:-database}
     volumes:
       - app:/usr/src/app
     ports:
       - "4000:4000"
+    environment:
+      APP_PORT: ${APP_PORT:-4000}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME:-database}
 
   database:
     build:
