--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
         condition: service_healthy
     networks:
       - elixphoenix
+    environment:
+      APP_PORT: ${APP_PORT}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME}
 
   database:
     image: exilesprx/elixphoenix-database:${VERSION:-main}
