--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - elixphoenix
     environment:
       APP_PORT: ${APP_PORT}
+      APP_SECRET_BASE_KEY: ${APP_SECRET_BASE_KEY}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
