--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,26 +10,14 @@ services:
     volumes:
       - app:/usr/src/app
     ports:
-      - "4000:4000"
+      - "4000:${APP_PORT:-4000}"
     environment:
-      APP_PORT: ${APP_PORT:-4000}
-      APP_IP: ${APP_IP:-0.0.0.0}
-      APP_SECRET_BASE_KEY: ${APP_SECRET_BASE_KEY:-wXjssXvWNHQ0R8LQy1JJmMINf/bpYeI4gdSG40jk1dzSsO6vZcE2JMWQ68qdlgle}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_HOSTNAME: ${POSTGRES_HOSTNAME:-database}
+      APP_SECRET_BASE_KEY: wXjssXvWNHQ0R8LQy1JJmMINf/bpYeI4gdSG40jk1dzSsO6vZcE2JMWQ68qdlgle
 
   database:
     build:
       context: .docker/postgres
       target: dev
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-elixphoenix_dev}"]
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-elixphoenix_dev}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
 
 volumes:
   app:
