--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       PHX_PORT: ${APP_PORT:-4000}
       PHX_HOST: ${APP_HOST:-}
       SECRET_KEY_BASE: ${APP_SECRET_KEY_BASE}
-      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@${POSTGRES_HOSTNAME:-database}/${POSTGRES_DB:-elixphoenix}
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@database/${POSTGRES_DB:-elixphoenix}
 
   database:
     image: exilesprx/elixphoenix-database:${VERSION:-main}
