--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,8 +9,8 @@ services:
     stdin_open: true
     volumes:
       - app:/usr/src/app
-    ports:
-      - "4000:${APP_PORT:-4000}"
+    # ports:
+    #   - "4000:${APP_PORT:-4000}"
     environment:
       PHX_IP: ${APP_IP:-0.0.0.0}
       SECRET_KEY_BASE: wXjssXvWNHQ0R8LQy1JJmMINf/bpYeI4gdSG40jk1dzSsO6vZcE2JMWQ68qdlgle
