--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,19 +10,19 @@ services:
     volumes:
       - app:/usr/src/app
     environment:
-      PHX_PORT: 4000
+      PHX_PORT: ${APP_PORT:-4000}
       PHX_IP: ${APP_IP:-0.0.0.0}
-      PHX_HOST: ${APP_HOST:-}
+      PHX_HOST: ${APP_HOST:-localhost}
       SECRET_KEY_BASE: wXjssXvWNHQ0R8LQy1JJmMINf/bpYeI4gdSG40jk1dzSsO6vZcE2JMWQ68qdlgle
       DATABASE_HOST: database
       DATABASE_NAME: ${POSTGRES_DB:-elixphoenix}
       DATABASE_USER: ${POSTGRES_USER:-postgres}
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     labels:
-      - "traefik.http.routers.app.rule=Host(`localhost`)"
+      - "traefik.http.routers.app.rule=Host(`${APP_HOST:-localhost}`)"
       - "traefik.http.routers.app.tls=false"
       - "traefik.http.routers.app.entrypoints=web"
-      - "traefik.http.services.app.loadbalancer.server.port=4000"
+      - "traefik.http.services.app.loadbalancer.server.port=${APP_PORT:-4000}"
 
   database:
     build:
@@ -51,7 +51,7 @@ services:
       - "--entryPoints.web.address=:8081"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dashboard.rule=Host(`localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.rule=Host(`${APP_HOST:-localhost}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.tls=false"
       - "traefik.http.routers.dashboard.entrypoints=web"
     ports:
