--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       SECRET_KEY_BASE: ${APP_SECRET_KEY_BASE}
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database/${POSTGRES_DB}
     labels:
-      - "traefik.http.routers.app.rule=Host(`elixphoenix.lan.soupybutter.com`)"
+      - "traefik.http.routers.app.rule=Host(`${APP_HOST}`)"
       - "traefik.http.routers.app.tls=true"
       - "traefik.http.routers.app.entrypoints=web"
       - "traefik.http.services.app.loadbalancer.server.port=443"
@@ -43,7 +43,7 @@ services:
       - "--certificatesresolvers.certresolver.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.certresolver.acme.storage=/letsencrypt/acme.json"
     labels:
-      - "traefik.http.routers.dashboard.rule=Host(`elixphoenix.lan.soupybutter.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.rule=Host(`${APP_HOST}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.tls.certresolver=certresolver"
       - "traefik.http.routers.dashboard.entrypoints=web"
